create orders,products,list screens,QRscanner setup with api's,added app icons, app rename

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
-        android:label="aultra_paints_mobile"
+        android:label="Aultra Paints"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
