after redeem qr code setup,working for ios & android

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,8 +24,16 @@
     <string>$(FLUTTER_BUILD_NUMBER)</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
-    <key>NSCameraUsageDescription</key>
-    <string>Camera is required to scan QR code</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Upload image from camera for screen background</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location for better service</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Post videos to profile</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Upload images for screen background</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
     <key>UIMainStoryboardFile</key>
