--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,8 @@ description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.0.1+3
+# version: 1.0.1+3
+version: 5.0.0+17
 
 environment:
   sdk: ^3.5.4
